# GroundTruthCurator

./: .gitignore  .gitlab-ci.yml  AGENTS.md  BUSINESS_VALUE.md  DEMO.md  FRONTEND_ANALYSIS_INDEX.md  FRONTEND_GAPS_SUMMARY.txt  FRONTEND_QUICK_REFERENCE.md  FRONTEND_REDESIGN_ANALYSIS.md  LICENSE  Makefile  Makefile.harness  RALPH_LEARNINGS.md  README.md  mkdocs.yml
backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEBASE.md  CONDITIONAL_PATCH_IMPLEMENTATION.md  COSMOS_EMULATOR_UNICODE_WORKAROUND.md  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  pytest-unit-results.xml  pytest.ini  test.http  vulture_whitelist.py
backend/.github/: copilot-instructions.md
backend/app/: __init__.py  container.py  demo_seed.py  main.py
backend/docs/: OBSERVABILITY_IMPLEMENTATION.md  api-change-checklist-assignments.md  api-write-consolidation-plan.md  api-write-consolidation-plan.v2.md  assign-single-item-endpoint.md  cosmos-count-nonvalueaggregate.md  cosmos-emulator-limitations.md  cosmos-emulator-unicode-workaround.md  drift_cleanup.md  export-pipeline.md  fastapi-implementation-plan.md  history-tags-feature.md  multi-turn-refs.md  phase5-delete-gate-audit.md  pytest-fastapi-cosmos-emulator-best-practices.md  tagging_plan.md  todos.md  user-self-serve-plan.md
backend/environments/: integration-tests.env  sample.env
backend/plans/: assignment-tag-stats-plan.md  azure-ai-search-sdk-plan.md  azure-monitor-logging-plan.md  backend-sort-by-total-references-plan.md  ci-cd-pipeline-plan.md  cosmos-emulator-test-lifecycle-plan.md  curation-instructions-plan.md  docker-aca-frontend-plan.md  extensible-tags-plan.md  ez-auth-aca-plan.md  generate-answer-plan.md  get-datasets-endpoint.md  gtc-chat-port-plan.md  guid-buckets-plan.md  id-search-parameter-plan.md  integration-coverage-gaps-plan.md  integration-usecase-flow-plan.md  questions-explorer-endpoint-plan.md  readme-setup-and-tests-plan.md  reference-url-search-plan.md  remove-memory-repo-plan.md  search-service-azure-plan.md  (+4 more)
(+581 files in other folders)
